# spring-2025-ccpilcha

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  vcpkg.json
assets/fonts/: atlas.json
assets/layouts/: mainmenu.yaml
assets/mods/test/: main.lua
assets/shaders/: chunk.f.glsl  chunk.v.glsl  gizmo.f.glsl  gizmo.v.glsl  highlight.f.glsl  highlight.v.glsl  sky.f.glsl  sky.v.glsl
assets/shaders/game/: chunk.f.glsl  chunk.v.glsl  gizmo.f.glsl  gizmo.g.glsl  gizmo.v.glsl  highlight.f.glsl  post.f.glsl  post.v.glsl  query.f.glsl  query.v.glsl  sky.f.glsl  sky.v.glsl
assets/shaders/ui/: button.f.glsl  button.v.glsl  msdf.f.glsl  msdf.v.glsl
assets/textures/: texturepack-simple.json
src/: CMakeLists.txt  main.cpp
src/client/: main.cpp
src/common/game/: Chunk.cpp  Chunk.hpp  Entity.hpp  GameConsole.cpp  GameConsole.hpp  GameContext.hpp  GameEngine.cpp  GameEngine.hpp  Player.cpp  Player.hpp  PrioritizedChunk.hpp  Structure.hpp  Terrain.cpp  Terrain.hpp  World.cpp  World.hpp
src/common/gfx/: ChunkMesh.cpp  ChunkRenderer.cpp  ChunkRenderer.hpp  ChunkVertex.hpp  Mesh.hpp  Plane.hpp  TextureArray.cpp  UILayer.hpp  VertexAttribute.hpp
src/common/lua/: LuaBindings.hpp  LuaEngine.cpp  LuaEngine.hpp  LuaScript.hpp  ModScript.cpp  ModScript.hpp
src/common/lua/bindings/: UI_Bindings.hpp
src/common/lua/objects/: Event.hpp  vec2.hpp
src/common/util/: GLHelper.hpp  PriorityThreadPool.cpp  ThreadPool.hpp
src/game/: Block.hpp  BlockInfo.hpp  Chunk.cpp  Chunk.hpp  ChunkConstants.hpp  ChunkPos.hpp  GameConfiguration.hpp  GameContext.hpp  GameEngine.cpp  GameEngine.hpp  GameState.hpp  Physics.hpp  Player.cpp  Player.hpp  PrioritizedChunk.hpp  SoundDriver.hpp  Structure.hpp  Terrain.cpp  Terrain.hpp  World.cpp  World.hpp
src/gfx/: Camera.hpp  ChunkMesh.cpp  ChunkMesh.hpp  ChunkRenderer.cpp  ChunkRenderer.hpp  ChunkVertex.hpp  GUI.cpp  GUI.hpp  GraphicsEngine.cpp  GraphicsEngine.hpp  HUD.cpp  HUD.hpp  Mesh.cpp  Mesh.hpp  Ray.hpp  Shader.hpp  TextRenderer.cpp  TextRenderer.hpp  TextureArray.cpp  TextureArray.hpp  UIComponent.hpp  UILayer.cpp  UILayer.hpp  VAO.hpp  VBO.hpp  VertexAttribute.hpp
src/server/: Client.hpp  Server.cpp  Server.hpp  main.cpp
src/util/: GLHelper.hpp  PriorityThreadPool.cpp  PriorityThreadPool.hpp  ThreadPool.cpp
test/: CMakeLists.txt  chunk_renderer.test.cpp
